qmake/generators/win32/mingw_make.cpp
@@ -46,8 +46,7 @@ QString MingwMakefileGenerator::escapeDependencyPath(const QString &path) const
 {
     QString ret = path;
     ret.replace('\\', "/");  // ### this shouldn't be here
-    ret.replace(' ', QLatin1String("\\ "));
-    return ret;
+    return MakefileGenerator::escapeDependencyPath(ret);
 }
 
 QString MingwMakefileGenerator::getManifestFileForRcFile() const
